--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
       "type": "composer",
       "url": "https://mirror.mage-os.org/"
     }
-  ]
+  ],
+  "config": {
+    "allow-plugins": {
+      "magento/magento-composer-installer": true,
+      "magento/inventory-composer-installer": true,
+      "laminas/laminas-dependency-plugin": true
+    }
+  }
 }
