--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   ],
   "config": {
     "allow-plugins": {
+      "magento/composer-dependency-version-audit-plugin": true,
       "magento/magento-composer-installer": true,
       "magento/inventory-composer-installer": true,
       "laminas/laminas-dependency-plugin": true
