add php version

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,3 +12,5 @@ jobs:
         with:
           args: --ignore-platform-reqs
       - uses: php-actions/phpunit@v3
+        bootstrap: vendor/autoload.php
+        php_version: "7.2"
