--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: php-actions/phpunit@v3
         with:
           bootstrap: vendor/autoload.php
+          version: "8"
           php_version: "7.2"
