--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "magento/framework": "*",
     "ext-openssl": "*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^8"
+  },
   "autoload": {
     "files": [
       "registration.php"
