--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -11,5 +11,5 @@ jobs:
           php-version: '7.2'
           extensions: gd, mcrypt, curl, intl, xsl, mbstring, openssl, zip, soap, bcmath
       - uses: actions/checkout@v3
-      - uses: php-actions/composer@v6
+      - run: composer install
       - run: ./vendor/bin/phpunit .
