use magento repo

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "https://mirror.mage-os.org/"
+      "url": "https://repo.magento.com/"
     }
   ],
   "config": {
