--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: composer global config http-basic.repo.magento.com ${{ secrets.MAGENTO_USERNAME }} ${{ secrets.MAGENTO_PASSWORD }}
       - run: composer install
-      - run: ./vendor/bin/phpunit .
+      - run: ./vendor/bin/phpunit Test
