pin CI to composer 2.8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           php-version: '7.2'
           extensions: gd, mcrypt, curl, intl, xsl, mbstring, openssl, zip, soap, bcmath
+          tools: composer:2.8
       - uses: actions/checkout@v3
       - run: composer global config http-basic.repo.magento.com ${{ secrets.MAGENTO_USERNAME }} ${{ secrets.MAGENTO_PASSWORD }}
       - run: composer install
